fix(Competitor promotion): align item images
(cherry picked from commit 78d7638)

--- a/src/public/css/main_en.css
+++ b/src/public/css/main_en.css
@@ -6828,6 +6828,10 @@ ul.newSelectList .miniStylePagination {
   bottom: 0;
   left: 0;
 }
+.bannerBlock {
+  position: absolute;
+  right: 20%;
+}
 .previewLocation .locationPath {
   padding: 10px;
   border-bottom: 1px solid #cfd8dc;
